--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
 }
 
+bootJar {
+	archiveClassifier.set('boot')
+}
+
+jar {
+	archiveClassifier.set('')
+}
+
 test {
 	useJUnitPlatform()
 }
